parteweb/html/image/nohup.out
  File "serverTechHubLabs.py", line 144
    app.run(host='ec2-52-209-149-64.eu-west-1.compute.amazonaws.com', port=8080 , ssl_context=context, threaded=True, debug=True)
    ^
IndentationError: unexpected indent
